--- a/components/PostList.module.css
+++ b/components/PostList.module.css
@@ -19,7 +19,6 @@
 .post-image img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
 }
 
 .info {
