--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -1,3 +1,8 @@
 .footer {
   text-align: center;
+  opacity: 0.6;
+}
+
+.footer h3 {
+  font-weight: 500;
 }
