--- a/pages/post/Post.module.css
+++ b/pages/post/Post.module.css
@@ -9,6 +9,6 @@
 }
 
 .post-text {
-  max-width: 960px;
+  max-width: 700px;
   margin: 0 auto;
 }
